spectrum -> spectrumPlot, fixed custom links wrapping

--- a/src/multiTable/style.scss
+++ b/src/multiTable/style.scss
@@ -58,10 +58,6 @@
     }
   }
 
-  &-custom1 {
-    margin-right: auto;
-  }
-
   &-coin {
     text-align: left;
   }
@@ -96,7 +92,7 @@
   }
 
   &-title {
-    margin: 0 10px 0 0;
+    margin: 0 10px 10px 0;
     font-size: 24px;
     font-weight: 400;
   }
